HADOOP-19310. Add JPMS options required by Java 17+